--- a/src/mainPage/mainPage.css
+++ b/src/mainPage/mainPage.css
@@ -13,3 +13,16 @@ html {
     justify-content: center;
     position: relative;
 }
+
+/* width */
+::-webkit-scrollbar {
+    width: 4px;
+}
+  
+  
+  
+  /* Handle */
+::-webkit-scrollbar-thumb {
+  background: white;
+  border-radius: 20px;
+}
