media queries/images

--- a/src/mainPage/mainPage.css
+++ b/src/mainPage/mainPage.css
@@ -26,3 +26,11 @@ html {
   background: white;
   border-radius: 20px;
 }
+
+
+
+@media only screen and (max-width: 400px) {
+  .main-page {
+    margin: 15vh auto;
+  }
+}
