--- a/src/aboutPage/aboutPage.css
+++ b/src/aboutPage/aboutPage.css
@@ -1,8 +1,8 @@
 .aboutMeContainer {
-    top: 15vh;
-    position:fixed;
-    left: 50%;            
-    transform: translateX(-50%);
+  top: 15vh;
+  position:fixed;
+  left: 50%;            
+  transform: translateX(-50%);
 }
 
 #arrow {
@@ -67,4 +67,26 @@
 
 .aboutMeText a {
     text-decoration: none;
+}
+
+@media only screen and (max-width: 450px) {
+  .aboutMeText {
+    padding-bottom: 3vh;
+    color:white;
+    width: 60vw;
+    max-width: 70vw;
+    border-radius: 10px;
+    font-size: 0.7rem;
+    line-height: 2.5rem;
+    min-height: 40vh;
+    max-height: 70vh;
+    overflow: auto;
+    padding-left: 2vw;
+    padding-right: 2vw;
+  }
+
+  .aboutMeContainer {
+    top: 7vh;
+  }
+
 }
