--- a/src/blogPage/blogPage.css
+++ b/src/blogPage/blogPage.css
@@ -1,3 +1,4 @@
+
 .backArrow3 a {
   color: inherit;
   text-decoration: none;
@@ -23,6 +24,7 @@ display: flex;
 flex-direction: column;
 align-items: center;
 padding-top: 2rem; 
+overflow: auto;
 }
 
 .blog-posts {
