--- a/src/projectsPage/projectsPage.css
+++ b/src/projectsPage/projectsPage.css
@@ -1,16 +1,14 @@
 .projectText {
     box-shadow: 0 2px 10px rgba(255, 255, 255, 0.05);
-    padding: 1vh;
     padding-left: 5vh;
     padding-right: 5vh;
     padding-bottom: 3vh;
-    margin-left: 20vh;
-    margin-right: 20vh;
     font-weight: light;
     overflow-y: scroll; /* This enables vertical scrolling */
     max-height: 60vh;
     border-radius: 10px;
-    max-width:fit-content;
+    max-width: fit-content;
+    overflow-x: hidden;
 }
 
 p {
@@ -30,18 +28,10 @@ p {
     -webkit-tap-highlight-color: transparent;
   }
 
-.projects {
-    top: 10vh;
-    position:fixed;
-    left: 50%;            
-    transform: translateX(-50%);
-}
+  .backArrow2 {
+    margin-top: 5vh;
+  }
 
-.backArrow2 {
-    margin-left:20vh;
-    margin-right:20vh;
-    font-size: 0.8rem;
-}
 
 ul {
     list-style:square;
@@ -91,13 +81,33 @@ ul {
     cursor: pointer;
   }
 
-  @media screen and (max-width: 450px) {
-    .projectText {
-      margin-right: 15vw;
-      margin-left: 15vw;
-    }
+.projects {
+  display: flex; /* Make this a flex container */
+  flex-direction: column;
+  gap: 15px; 
+  padding: 10px; 
+  margin-left: 15vw;
+  margin-right: 15vw;
+}
 
-    .backArrow2 {
-      margin-left: 15vw;
-    }
+#arrow {
+  font-size: 4rem;
+}
+
+@media only screen and (max-width: 450px) {
+  .projects {
+    margin-left: 5vw;
+    margin-right: 5vw;
   }
+
+  hr {
+    width: auto;
+  }
+
+  .backArrow2 {
+    margin-top: 1vh;
+  }
+
+
+
+}
