--- a/src/projectsPage/projectsPage.css
+++ b/src/projectsPage/projectsPage.css
@@ -1,16 +1,17 @@
 
 
+
 .projectText {
-    box-shadow: 0 2px 10px rgba(255, 255, 255, 0.05);
-    padding-left: 5vh;
-    padding-right: 5vh;
-    padding-bottom: 3vh;
-    font-weight: light;
-    overflow-y: scroll; /* This enables vertical scrolling */
-    max-height: 60vh;
-    border-radius: 10px;
-    max-width: fit-content;
-    overflow-x: hidden;
+  box-shadow: 0 2px 10px rgba(255, 255, 255, 0.05);
+  padding-left: 5vh;
+  padding-right: 5vh;
+  padding-bottom: 3vh;
+  font-weight: light;
+  overflow-y: scroll; 
+  max-height: 60vh;
+  border-radius: 10px;
+  max-width: fit-content;
+  overflow-x: hidden;
 }
 
 p {
@@ -19,81 +20,83 @@ p {
     padding: 0px;
 }
 
+
 #projects {
-    font-weight: bold;
-    color: #efb9ec;
+  font-weight: bold;
+  color: #efb9ec;
+  
 }
 
 .backArrow2 a {
-    color: inherit;
-    text-decoration: none;
-    -webkit-tap-highlight-color: transparent;
+  color: inherit;
+  text-decoration: none;
+  -webkit-tap-highlight-color: transparent;
   }
 
-  .backArrow2 {
-    margin-top: 5vh;
-  }
+.backArrow2 {
+  margin-top: 10vh;
+}
 
 
 ul {
-    list-style:square;
-    font-size: 18px;
-    line-height: 3vh;
-    color:white;
-    border-radius: 5px;
-    padding-bottom: 15px;
-    padding-top: 15px;
-    background-color: #141c35;
+  list-style:square;
+  font-size: 18px;
+  line-height: 3vh;
+  color:white;
+  border-radius: 5px;
+  padding-bottom: 15px;
+  padding-top: 15px;
+  background-color: #141c35;
   }
   
   
-  hr {
-    border-top: 1px solid #ffffff;
-    width: 60vw
-  }
-  
-  
-  .URide {
-    margin-top: 40px;
-    margin-bottom: 40px;
-  }
-  
-  .trivia {
-    margin-top: 40px;
-    margin-bottom: 40px;
-  }
-  
-  .sudoku {
-    margin-top: 40px;
-    margin-bottom: 40px;
-  }
-  
-  .weather {
-    margin-top: 40px;
-    margin-bottom: 40px;
-  }
-  
-  .projectText a {
-    color: inherit;
-    text-decoration: none;
-    -webkit-tap-highlight-color: transparent;
-  }
+hr {
+  border-top: 1px solid #ffffff;
+  width: 60vw
+}
 
-  Link {
-    cursor: pointer;
-  }
+
+.URide {
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.trivia {
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.sudoku {
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.weather {
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+  
+.projectText a {
+  color: inherit;
+  text-decoration: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
+Link {
+  cursor: pointer;
+}
 
 .projects {
-  display: flex; /* Make this a flex container */
+  display: flex; 
   flex-direction: column;
-  gap: 15px; 
-  padding: 10px; 
+  gap: 5px; 
+  padding: 5px; 
   margin-left: 15vw;
   margin-right: 15vw;
 }
 
 #arrow {
-  font-size: 4rem;
+  font-size: 2rem;
 }
 
 @media only screen and (max-width: 550px) {
