--- a/src/blogPage/blogPage.css
+++ b/src/blogPage/blogPage.css
@@ -5,6 +5,22 @@
   -webkit-tap-highlight-color: transparent;
 }
 
+#roundedblog {
+  border: 1px solid white;
+  max-width: 1300px;
+  min-width: 300px;
+}
+
+.white-cat {
+  width: max-content;
+  width: 70px;    /* --- Adjust this width to make it smaller/larger --- */
+  height: auto;   /* Maintain aspect ratio */
+  margin-top: -5vh; /* Space above the cat (adjust as needed) */
+  margin-bottom: -24px; /* Space between cat and the hr (adjust as needed) */
+  margin-left: 40vw; 
+}
+
+
 
 .blog-page {
   display: flex;
@@ -14,7 +30,7 @@
 }
 
 .backArrow3 #back {
-  font-size: 2.5rem;
+  font-size: 2.3rem;
 }
 
 .backArrow3 {
@@ -25,7 +41,8 @@
   max-width: 1200px;
   margin-left: auto; 
   margin-right: auto; 
-  margin-bottom: 2rem; 
+  margin-bottom: 1rem; 
+  margin-top: 2rem;
   text-align: left;
 }
 
