--- a/src/mainPage/mainPage.css
+++ b/src/mainPage/mainPage.css
@@ -10,8 +10,12 @@ html {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: auto;
-    margin-bottom: auto;
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 15vh;
+    width: 100%;
+    height: 100%;
 }
 
 /* width */
