--- a/src/mainPage/mainPage.css
+++ b/src/mainPage/mainPage.css
@@ -45,9 +45,11 @@ html {
 
 @media only screen and (max-width: 550px) {
   .main-page {
-    margin-top: 10vh;
-    margin-left: 0;
-    margin-right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
   }
 
   .information img {
